Добавляю форму редактирования изображения

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <form
               class="img-upload__form"
               id="upload-select-image"
+              action="https://24.javascript.pages.academy/kekstagram"
               method="post"
               enctype="multipart/form-data"
               autocomplete="off"
