--- a/index.html
+++ b/index.html
@@ -297,7 +297,8 @@
 
             <!-- Комментарии к изображению -->
             <div class="social__comment-count">
-              5 из <span class="comments-count">125</span> комментариев
+              <span class="comment-count-now">5</span> из
+              <span class="comments-count">125</span> комментариев
             </div>
             <ul class="social__comments">
               <li class="social__comment">
